<resources>
    <string name="app_name">Covid19</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Suivi Covid-19</string>
    <string name="nav_header_subtitle">covid.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>

    <string name="search_hint">Rechercher ... </string>

    <string name="menu_home">Accueil</string>
    <string name="menu_country">Pays</string>
    <string name="menu_about">Covid-19 ?</string>
    <string name="menu_advice">Se protéger</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descvirus">Cliquez sur l\'image pour savoir ce que c\'est que le coronavirus, son origine, …</string>
    <string name="descConseil">Cliquez sur l\'image pour voir quelques conseils vous permettant d\'éviter le covid-19</string>
    <string name="cliquez">Cliquez pour voir le détail</string>


    <!-- Ajout de blanc \u0020 en unnicode ou &#160;-->
    <string name="cas">\u0020 Cas </string>
    <string name="rechercher">Rechercher...</string>
    <string name="titleDetail">Covid-19</string>

    <string name="totalCas"><b>Infectés</b> \nNombre de cas</string>
    <string name="totalCasT">Infectés</string>
    <string name="totalCasS">Nombre de cas</string>

    <string name="nbGueri"><b>Guéris</b> \nNombre de guéris</string>
    <string name="nbGueri1">Guéris</string>
    <string name="nbGueri2">Nombre de guéris</string>

    <string name="nbNewCas"><b>Nouveaux cas</b> \nNombre de nouveaux cas</string>
    <string name="nbNewCas1">Nouveaux cas</string>
    <string name="nbNewCas2">Nombre de nouveaux cas</string>


    <string name="nbNewDeath"><b>Nouveaux morts</b> \nNombre de nouveaux morts</string>
    <string name="nbNewDeath1">Nouveaux morts</string>
    <string name="nbNewDeath2">Nombre de nouveaux morts</string>

    <string name="nbTotalDeath"><b>Décès</b> \nNombre de cas décédés</string>
    <string name="nbTotalDeath1">Décès</string>
    <string name="nbTotalDeath2">Nombre de cas décédés</string>

    <string name="nbActiveCas"><b>Sous traitement</b> \nNombre de cas sous traitement</string>
    <string name="nbActiveCas1">Sous traitement</string>
    <string name="nbActiveCas2">Nombre de cas sous traitement</string>

    <string name="nbCasPer1m"><b>Cas géographiquement</b> \nNombre de cas par 1m population</string>
    <string name="nbCasPer1m1">Cas géographiquement</string>
    <string name="nbCasPer1m2">Nombre de cas par 1m population</string>

    <string name="nbCritical"><b>Cas critiques</b> \nNombre de cas critiques</string>
    <string name="nbCritical1">Cas critiques</string>
    <string name="nbCritical2">Nombre de cas critiques</string>

    <string name="enteteDetailPays">Les statistiques</string>
    <string name="tV">TextView</string>
    <string name="bt">Button</string>
    <string name="enteteAccueil">Suivez l\'évolution du coronavirus en temps réel</string>
    <string name="conseilFooter">Respectez les mesures prise par votre état, pour votre sécurité !</string>

    <string name="TitleCountryFrag">Pays contaminés</string>
    <string name="TitleAboutFrag">Tout sur le Covid-19</string>
    <string name="TitleAdviceFrag">Conseils</string>

    <string name="soutitleDetail1">Les données de</string>
    <string name="soutitleDetail2">sur le coronavirus</string>
    <string name="date">Dernière mise à jour :</string>
    <string name="titleAdvice">Prenez des mesures pour vous protéger</string>


    <string name="countries">Pays</string>
    <string name="advices">Conseils</string>
    <string name="about">A propos</string>


    <string name="congrats_text">Bravooo vous êtes conncecté</string>
    <string name="sign_out_button">Déconnexion</string>

    <string name="facebook_app_id" translatable="false">752168458922040</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb752168458922040</string>


</resources>
