<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_country"
            android:icon="@drawable/ic_flag_black_24dp"
            android:title="@string/menu_country" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_advice"
            android:icon="@drawable/ic_security_black_24dp"
            android:title="@string/menu_advice" />
    </group>
</menu>
